--- a/index.html
+++ b/index.html
@@ -256,29 +256,61 @@
 
     <div id="experience" class="w-full px-[12%] mt-10 py-10 scroll-mt-20">
         <h2 class="text-center text-5xl font-Ovo">My experience</h2>
-        <div class="flex flex-col mt-5 gap-3">
-            <div class="flex gap-2 text-xl">
-                <i class="bi bi-building"></i>
-                <p>Ziya Academy LLP, Ernakulam, Kerala</p>
+        <div class="relative border-l-4 border-gray-500">
+
+            <div class="relative flex flex-col ml-6 mt-5 gap-3">
+                <span class="absolute -left-8 w-3 h-3 bg-gray-900 dark:bg-gray-100 rounded-full"></span>
+
+                <div class="flex gap-2 text-xl">
+                    <i class="bi bi-building"></i>
+                    <p>Ziya Academy LLP, Ernakulam, Kerala</p>
+                </div>
+                <p class="text-3xl">Full Stack Developer</p>
+                <div class="flex gap-2">
+                    <i class="bi bi-calendar"></i>
+                    <p>Jul 2025 - Dec 2025</p>
+                </div>
+                <p>Worked as a MERN Stack Developer using TypeScript and Tailwind CSS, focusing on a single company web
+                    application.
+                    Invested significant hours in development, creating an admin panel with CRUD functionalities and
+                    integrating a project collaboration system like ColabiX. This role involved close teamwork and
+                    delivering
+                    a polished, user-friendly digital platform.</p>
+                <div class="flex gap-2 tex-center flex-wrap ">
+                    <p class="rounded-full px-3 border border-gray-800">React.js</p>
+                    <p class="rounded-full px-3 border border-gray-800">Javascript</p>
+                    <p class="rounded-full px-3 border border-gray-800">Tailwind CSS</p>
+                    <p class="rounded-full px-3 border border-gray-800">Node.js</p>
+                    <p class="rounded-full px-3 border border-gray-800">Express</p>
+                    <p class="rounded-full px-3 border border-gray-800">MongoDB</p>
+                    <p class="rounded-full px-3 border border-gray-800">TypeScript</p>
+                </div>
             </div>
-            <p class="text-3xl">Full Stack Developer</p>
-            <div class="flex gap-2">
-                <i class="bi bi-calendar"></i>
-                <p>2025</p>
-            </div>
-            <p>Worked as a MERN Stack Developer using TypeScript and Tailwind CSS, focusing on a single company web
-                application.
-                Invested significant hours in development, creating an admin panel with CRUD functionalities and
-                integrating a project collaboration system like ColabX. This role involved close teamwork and delivering
-                a polished, user-friendly digital platform.</p>
-            <div class="flex gap-2 tex-center flex-wrap ">
-                <p class="rounded-full px-3 border border-gray-800">React.js</p>
-                <p class="rounded-full px-3 border border-gray-800">Javascript</p>
-                <p class="rounded-full px-3 border border-gray-800">Tailwind CSS</p>
-                <p class="rounded-full px-3 border border-gray-800">Node.js</p>
-                <p class="rounded-full px-3 border border-gray-800">Express</p>
-                <p class="rounded-full px-3 border border-gray-800">MongoDB</p>
-                <p class="rounded-full px-3 border border-gray-800">TypeScript</p>
+
+             <div class="relative flex flex-col ml-6 mt-16 gap-3">
+                <span class="absolute -left-8 w-3 h-3 bg-gray-900 dark:bg-gray-100 rounded-full"></span>
+
+                <div class="flex gap-2 text-xl">
+                    <i class="bi bi-building"></i>
+                    <p>REPOXAI, Wayanad, Kerala</p>
+                </div>
+                <p class="text-3xl">Full Stack Developer</p>
+                <div class="flex gap-2">
+                    <i class="bi bi-calendar"></i>
+                    <p>Feb 2026 - Present</p>
+                </div>
+                <p>Worked as a MERN Stack Developer using Next.js and Tailwind CSS, focusing on  company web
+                    applications.
+                    </p>
+                <div class="flex gap-2 tex-center flex-wrap ">
+                    <p class="rounded-full px-3 border border-gray-800">Nexts.js</p>
+                    <p class="rounded-full px-3 border border-gray-800">Javascript</p>
+                    <p class="rounded-full px-3 border border-gray-800">Tailwind CSS</p>
+                    <p class="rounded-full px-3 border border-gray-800">Node.js</p>
+                    <p class="rounded-full px-3 border border-gray-800">Express</p>
+                    <p class="rounded-full px-3 border border-gray-800">MongoDB</p>
+                    <p class="rounded-full px-3 border border-gray-800">TypeScript</p>
+                </div>
             </div>
         </div>
     </div>
@@ -460,26 +492,29 @@
         <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">Please contact me directly at <span
                 class="font-bold"> nizampnizam7@gmail.com </span> or through this form.
         </p>
-        <form class="max-w-2xl mx-auto">
-            <input type="hidden" name="subject" value="Eliana Jade - New form Submission">
+
+        <form id="contactForm" class="max-w-2xl mx-auto">
+            <input id="subjectInput" type="hidden" name="subject" value="Nizamudheen Portfolio - New Connection Submission">
             <div class="grid grid-cols-auto gap-6 mt-10 mb-8">
-                <input type="text" placeholder="Enter your name"
+                <input id="nameInput" type="text" placeholder="Enter your name"
                     class="flex-1 px-3 py-2 focus:ring-1 outline-none border border-gray-300 dark:border-white/30 rounded-md bg-white dark:bg-darkHover/30"
-                    ] required="" name="name">
-                <input type="email" placeholder="Enter your email" ]
+                     required="" name="name"  >
+                <input id="emailInput" type="email" placeholder="Enter your email" 
                     class="flex-1 px-3 py-2 focus:ring-1 outline-none border border-gray-300 dark:border-white/30 rounded-md bg-white dark:bg-darkHover/30"
                     required="" name="email">
             </div>
             <textarea rows="6" placeholder="Enter your message"
+            id="messageInput"
                 class="w-full px-4 py-2 focus:ring-1 outline-none border border-gray-300 dark:border-white/30 rounded-md bg-white mb-6 dark:bg-darkHover/30"
                 required="" name="message"></textarea>
             <button type="submit"
                 class="py-2 px-8 w-max flex items-center justify-between gap-2 bg-black/80 text-white rounded-full mx-auto hover:bg-black duration-500 dark:bg-transparent dark:border dark:border-white/30 dark:hover:bg-darkHover">
-                Submit now
+                Submit
                 <img src="./assets/right-arrow-white.png" alt="" class="w-4">
             </button>
             <p class="mt-4"></p>
         </form>
+
     </div>
 
     <!-- Footer -->
@@ -490,7 +525,7 @@
                 <div class="w-max flex items-center gap-2 mx-auto">
                     <img src="./assets/mail_icon.png" alt="" class="w-5 dark:hidden">
                     <img src="./assets/mail_icon_dark.png" alt="" class="w-5 hidden dark:block">
-                    <a href="#!">nizampnizam7@gmail.com.com</a>
+                    <a href="mailto:nizampnizam7@gmail.com.com">nizampnizam7@gmail.com.com</a>
                 </div>
             </div>
 
