--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </div>
             </div>
 
-             <div class="relative flex flex-col ml-6 mt-16 gap-3">
+            <div class="relative flex flex-col ml-6 mt-16 gap-3">
                 <span class="absolute -left-8 w-3 h-3 bg-gray-900 dark:bg-gray-100 rounded-full"></span>
 
                 <div class="flex gap-2 text-xl">
@@ -299,9 +299,9 @@
                     <i class="bi bi-calendar"></i>
                     <p>Feb 2026 - Present</p>
                 </div>
-                <p>Worked as a MERN Stack Developer using Next.js and Tailwind CSS, focusing on  company web
+                <p>Worked as a MERN Stack Developer using Next.js and Tailwind CSS, focusing on company web
                     applications.
-                    </p>
+                </p>
                 <div class="flex gap-2 tex-center flex-wrap ">
                     <p class="rounded-full px-3 border border-gray-800">Nexts.js</p>
                     <p class="rounded-full px-3 border border-gray-800">Javascript</p>
@@ -494,17 +494,17 @@
         </p>
 
         <form id="contactForm" class="max-w-2xl mx-auto">
-            <input id="subjectInput" type="hidden" name="subject" value="Nizamudheen Portfolio - New Connection Submission">
+            <input id="subjectInput" type="hidden" name="subject"
+                value="Nizamudheen Portfolio - New Connection Submission">
             <div class="grid grid-cols-auto gap-6 mt-10 mb-8">
                 <input id="nameInput" type="text" placeholder="Enter your name"
                     class="flex-1 px-3 py-2 focus:ring-1 outline-none border border-gray-300 dark:border-white/30 rounded-md bg-white dark:bg-darkHover/30"
-                     required="" name="name"  >
-                <input id="emailInput" type="email" placeholder="Enter your email" 
+                    required="" name="name">
+                <input id="emailInput" type="email" placeholder="Enter your email"
                     class="flex-1 px-3 py-2 focus:ring-1 outline-none border border-gray-300 dark:border-white/30 rounded-md bg-white dark:bg-darkHover/30"
                     required="" name="email">
             </div>
-            <textarea rows="6" placeholder="Enter your message"
-            id="messageInput"
+            <textarea rows="6" placeholder="Enter your message" id="messageInput"
                 class="w-full px-4 py-2 focus:ring-1 outline-none border border-gray-300 dark:border-white/30 rounded-md bg-white mb-6 dark:bg-darkHover/30"
                 required="" name="message"></textarea>
             <button type="submit"
@@ -537,6 +537,8 @@
             </ul>
         </div>
     </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
     <script src="./script.js"></script>
 
